--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -30,6 +30,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: 17
+          distribution: corretto
 
       - name: Build with Maven
         run: mvn clean install
