--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -27,10 +27,11 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: 17
-          distribution: corretto
+          distribution: 'corretto'
+          java-version: '17'
+          cache: 'maven'
 
       - name: Build with Maven
         run: mvn clean install
