--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -35,3 +35,17 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+
+      - name: Log in to Azure Container Registry
+        uses: docker/login-action@v2.1.0
+        with:
+          registry: devopsvjem.azurecr.io
+          username: ${{ secrets.AZURE_REGISTRY_USERNAME }}
+          password: ${{ secrets.AZURE_REGISTRY_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v4.0.0
+        with:
+          context: .
+          push: true
+          tags: devopsvjem.azurecr.io/devOps-Exercise:${{ github.sha }}
