--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -49,3 +49,26 @@ jobs:
           context: .
           push: true
           tags: devopsvjem.azurecr.io/devops-exercise:${{ github.sha }}
+
+      - name: Azure login
+        id: login
+        uses: azure/login@v1.4.3
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Set AKS context
+        uses: azure/aks-set-context@v3
+        with:
+          resource-group: devops-exercise
+          cluster-name: devops
+
+      - name: Setup kubectl
+        uses: azure/setup-kubectl@v3
+
+      - name: Deploy to AKS
+        uses: Azure/k8s-deploy@v4
+        with:
+          namespace: devops-ns
+          manifests: k8s/devops-exercise.yaml
+          images: devopsvjem.azurecr.io/devops-exercise:${{ github.sha }}
+          pull-images: false
