--- a/k8s/devops-exercise.yaml
+++ b/k8s/devops-exercise.yaml
@@ -8,8 +8,8 @@ spec:
   ports:
     - protocol: TCP
       name: http
-      port: 9001
-      targetPort: 9001
+      port: 80
+      targetPort: 80
 ---
 apiVersion: v1
 kind: ServiceAccount
@@ -80,7 +80,8 @@ spec:
               app: devops-exercise
       containers:
         - name: devops-exercise
-          image: devopsvjem.azurecr.io/devops-exercise:1.0.1
+          imagePullPolicy: Always
+          image: devopsvjem.azurecr.io/devops-exercise:1.0.2
           readinessProbe:
             httpGet:
               path: /actuator/health
@@ -103,6 +104,6 @@ spec:
               memory: "700Mi"
               cpu: "500m"
           ports:
-            - containerPort: 9001
+            - containerPort: 80
               name: http
               protocol: TCP
