--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -28,6 +28,8 @@ jobs:
 
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@v1.9.1
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         with:
           projectBaseDir: .
 
