--- a/.github/workflows/deploy-az.yml
+++ b/.github/workflows/deploy-az.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Build with Maven
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        run: mvn clean install sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=vivianaestrella13 -Dsonar.projectKey=Vivianaestrella13_devOps-exercise
+        run: mvn clean install verify sonar:sonar -Dsonar.host.url=https://sonarcloud.io -Dsonar.organization=vivianaestrella13 -Dsonar.projectKey=Vivianaestrella13_devOps-exercise
 
       - name: Log in to Azure Container Registry
         uses: docker/login-action@v2.1.0
